--- a/css/styles.css
+++ b/css/styles.css
@@ -18,17 +18,27 @@ body {
     flex: 0 1 auto;
 }
 
+.logo {
+    text-align: center;
+}
+
+.logo img {
+    display: block;
+    margin: 30px auto 10px auto;
+    padding: 30px auto;
+    width: 150px;
+}
+
+.logo p {
+    padding-top: 0;
+    margin-top: 0;
+    font-size: 0.8em;
+}
+
 .main-content {
     flex: 1 1 auto;
     display: flex;
     height: 100vh;
-}
-
-.main-header img {
-    display: block;
-    margin: 30px auto 30px auto;
-    padding: 30px auto;
-    width: 150px;
 }
 
 .navigation-bar {
@@ -73,7 +83,7 @@ main {
 .main-content ul li {
     cursor: pointer;
     position: relative;
-    border: 1px dashed black;
+    border: 1px dotted black;
     border-radius: 20px;
     margin: 10px;
     padding: 10px;
