--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,9 @@ nav ul li a:visited {
     top: 0;
     height: 100%;
     width: 300%;
+}
+
+.image-slide {
     animation: slideshow 40s linear infinite;
     transform: translate3d(0, 0, 0);
 }
