--- a/css/styles.css
+++ b/css/styles.css
@@ -237,25 +237,43 @@ main {
 form {
     display: flex;
     flex-direction: column;
-    text-align: justify;
-    text-justify: newspaper;
 }
 .name-email {
+    display: flex;
     padding: 20px 0;
-    align-content: center;
+    margin: 0 auto;
+}
+
+label {
+    padding: 0 10px;
 }
 
 input[type=text] {
-
+    border: 1px solid black;
+    padding: 12px; 
 }
 
+input[type=text]:focus {
+    border: 5px solid #793236;
+    box-shadow: none;
+}
+
+textarea {
+    width: 100%;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    border-radius: 5px;
+    resize: none;
+}
 
 /* Footer section */
 
 footer {
     width: 100%;
     font-family: brands, sans-serif;
-    font-size: 25px;
+    margin-top: 20px;
+    text-align: center;
 }
 
 footer ul {
@@ -263,7 +281,7 @@ footer ul {
     list-style-type: none;
     align-items: center;
     align-content: center;
-    justify-content: space-around;
+    justify-content: center;
     padding: 0;
     margin-top: 5px;
 }
@@ -276,9 +294,13 @@ footer ul li {
 
 footer ul li a {
     font-family: brands, sans-serif;
-    font-size: 25px;
+    font-size: 2em;
     color: #000;
     text-decoration: none;
+}
+
+.last-words {
+    font-size: .7em;
 }
 
 /*
