--- a/css/styles.css
+++ b/css/styles.css
@@ -225,28 +225,66 @@ main {
 
 .about-content {
     display: flex;
-    text-align: justify;
-    text-justify: auto;
 }
 
 .column {
     width: 50%;
     padding: 0 20px;
+    text-align: justify;
+    text-justify: auto;
+}
+
+.h3-about {
+    text-align: center;
+    font-size: 1em;
+    margin-top: 50px;
 }
 
 .cv-download {
-    text-align: center;
-    margin: 0 auto;
+    display: flex;
+    align-content: center;
 }
 
 .cv-download a {
+    display: flex;
+    flex-direction: column;
     text-decoration: none;
+    width: 50%;
+    padding: 5px 0;
+    align-content: flex-end
+}
+
+.a-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 15px;
+}
+
+.a-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 15px;
+}
+
+.cv-download a span {
+    font-size: 0.8em;
+    margin-top: 10px;
+    color: white;
+}
+
+.span-left {
+    margin-right: 15px;
+}
+
+.cv-download a span:hover {
+    text-decoration: underline;
 }
 
 .cv-logo {
-    width: 10%;
+    width: 30%;
 }
-
 
 /* Contact section */
 
