--- a/css/styles.css
+++ b/css/styles.css
@@ -80,20 +80,25 @@ nav ul li a:visited {
     font-weight: bold;
 }
 
+main {
+    padding: 0px;
+    text-align: center;
+}
+
+.section-titles {
+    padding: 50px 0 50px 0;
+}
+
 /* Home section */
 .home {
-    height: 100vw;
+    height: 100%;
     position: relative;
     overflow: hidden;
     box-sizing: border-box;
 }
 
-.home .image {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 600%;
+.home .skyline {
+    width: 250%;
 }
 
 .home .image #Clouds {
@@ -106,25 +111,29 @@ nav ul li a:visited {
     transform: translate3d(0, 0, 0);
 }
 
-@keyframes slideshow {
-    0%    { left: 0; }
-    100%  { left: -200%; }
+/* Skyline animation */
+
+#Buildings.buildings {
+    animation-duration: 40s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-name: buildings;
+    animation-direction: alternate;
+    animation-fill-mode: forwards;
 }
 
-@keyframes moveSlideshow {  
-    100% { 
-      -webkit-transform: translateX(-200%);  
-    }
+#Clouds.clouds {
+    animation-duration: 30s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-name: clouds;
 }
 
-main {
-    margin: 0px auto;
-    padding: 0px;
-    text-align: center;
-}
-
-.section-titles {
-    padding: 50px 0 50px 0;
+#Rain.rain {
+    animation-duration: 30s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-name: rain;
 }
 
 /* Arch portfolio section */
@@ -430,6 +439,12 @@ footer ul li a {
 /* Media query max 426px width */
 @media screen and (max-width: 426px) {
     
+    /* Home section */
+    .skyline {
+
+    }
+
+
     /* About section */
 
     .about {
@@ -577,6 +592,13 @@ footer ul li a {
     /* footer */
 
 }
+
+
+
+
+
+
+
 
 
 
