--- a/css/styles.css
+++ b/css/styles.css
@@ -420,6 +420,11 @@ footer ul li a {
 /* Media query max 426px width */
 @media screen and (max-width: 426px) {
     
+    /* Main header */
+    .main-header {
+        background-color: rgba(255, 255, 255, 0.63);
+    }
+
     /* Nav bar */
     .circle-nav {
         width: 20px;
@@ -437,17 +442,37 @@ footer ul li a {
     .navigation-list.show-bar {
         display: flex;
         flex-direction: column;
-        padding: 0;
+        margin-top: 30px;
+        background-color: rgb(255, 255, 255);
+        padding: 20px;
+        border-radius: 20px;
+        border: #793236 1px dotted;
     }
 
     .navigation-list li {
         margin: 5px 0;
     }
 
+    .navigation-list li:nth-child(3) {
+        order: 1;
+    }
+
+    .navigation-list li:nth-child(2) {
+        order: 2;
+    }
+
+    .navigation-list li:nth-child(1) {
+        order: 3;
+    }
+
+    .navigation-list li:nth-child(4) {
+        order: 4;
+    }
+
 
     /* Home section */
-    .skyline {
-
+    .home .skyline {
+        width: 500%;
     }
 
 
