--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,13 @@ head {
   font-family: Verdana, Geneva, Tahoma, sans-serif; }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   font-family: Montserrat, sans-serif; }
 
 .main-header {
@@ -58,7 +63,8 @@ nav ul li a {
 nav ul li a:hover {
   color: #793236;
   font-size: 1.1em;
-  text-decoration: underline overline black; }
+  -webkit-text-decoration: underline overline black;
+          text-decoration: underline overline black; }
 
 nav ul li a:visited {
   color: #793236;
@@ -77,42 +83,59 @@ main {
   height: 100%;
   position: relative;
   overflow: hidden;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .home .skyline {
   width: 300%; }
 
 /* Skyline animation */
 #Buildings.buildings {
-  transform: translateX(-3000px);
+  -webkit-transform: translateX(-3000px);
+          transform: translateX(-3000px);
+  -webkit-transition: 40s;
   transition: 40s; }
 
 #Clouds.clouds {
-  transform: translateX(100px);
+  -webkit-transform: translateX(100px);
+          transform: translateX(100px);
+  -webkit-transition: 10s;
   transition: 10s; }
 
 #Cloud1.clouds {
-  transform: translateX(1000px);
-  transform: scale(1.5);
+  -webkit-transform: translateX(1000px);
+          transform: translateX(1000px);
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+  -webkit-transition: 100s;
   transition: 100s; }
 
 #Cloud2 {
-  transform: translateX(-3000px);
+  -webkit-transform: translateX(-3000px);
+          transform: translateX(-3000px);
+  -webkit-transition: 40s;
   transition: 40s; }
 
 #Cloud3 {
-  transform: translateX(-3000px);
+  -webkit-transform: translateX(-3000px);
+          transform: translateX(-3000px);
+  -webkit-transition: 40s;
   transition: 40s; }
 
 #Cloud4 {
-  transform: translateX(-3000px);
+  -webkit-transform: translateX(-3000px);
+          transform: translateX(-3000px);
+  -webkit-transition: 40s;
   transition: 40s; }
 
 #Cloud5.clouds {
-  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  -webkit-transition: 40s;
   transition: 40s; }
 
 #Cloud6.clouds {
+  -webkit-transition: 40s;
   transition: 40s; }
 
 /* Arch portfolio section */
@@ -120,7 +143,8 @@ main {
   width: 1200px;
   text-align: center;
   margin: 0 auto;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .thumbnail-list {
   list-style: none;
@@ -128,7 +152,8 @@ main {
   margin: 0px; }
 
 .thumbnail-list li {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   cursor: pointer;
   position: relative;
   border: 1px dotted black;
@@ -145,7 +170,8 @@ main {
 
 .back-side .front-side {
   position: absolute;
-  backface-visibility: hidden; }
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden; }
 
 .back-side {
   text-align: center;
@@ -153,7 +179,8 @@ main {
   font-size: 0.80em; }
 
 .back-side {
-  transform: rotateY(180); }
+  -webkit-transform: rotateY(180);
+          transform: rotateY(180); }
 
 .thumbnail-image {
   width: 200px; }
@@ -168,13 +195,15 @@ main {
   width: 1200px;
   margin: 0 auto;
   text-align: center;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .websites-list {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .websites-item {
   cursor: pointer;
@@ -187,7 +216,8 @@ main {
   height: 250px;
   overflow: hidden;
   border-radius: 20px;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .websites-list li a {
   text-decoration: none;
@@ -201,9 +231,12 @@ main {
 .about {
   width: 1200px;
   margin: 0 auto;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .about-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background-color: #793236;
   border-radius: 20px;
@@ -223,27 +256,50 @@ main {
   margin-top: 50px; }
 
 .cv-download {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-content: center; }
+  -ms-flex-line-pack: center;
+      align-content: center; }
 
 .cv-download a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-decoration: none;
   width: 50%;
   padding: 5px 0;
-  align-content: flex-end; }
+  -ms-flex-line-pack: end;
+      align-content: flex-end; }
 
 .a-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   margin-right: 15px; }
 
 .a-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   margin-left: 15px; }
 
 .cv-download a span {
@@ -265,14 +321,23 @@ main {
   width: 1200px;
   margin: 0 auto;
   text-align: center;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  box-sizing: border-box; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .name-email {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 20px 0;
   margin: 0 auto;
@@ -295,13 +360,15 @@ input[type=text] {
 
 input[type=text]:focus {
   border: 2px solid #793236;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   outline: 0; }
 
 textarea {
   width: 100%;
   padding: 11px 21px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border: 1px solid black;
   resize: none;
   border-radius: 20px; }
@@ -330,14 +397,22 @@ footer {
   font-family: brands, sans-serif;
   margin-top: 50px;
   text-align: center;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style-type: none;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 0;
   margin-top: 5px; }
 
@@ -391,8 +466,13 @@ footer ul li a {
   .navigation-list {
     display: none; }
   .navigation-list.show-bar {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-top: 30px;
     background-color: white;
     padding: 20px;
@@ -401,13 +481,21 @@ footer ul li a {
   .navigation-list li {
     margin: 5px 0; }
   .navigation-list li:nth-child(3) {
-    order: 1; }
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
   .navigation-list li:nth-child(2) {
-    order: 2; }
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; }
   .navigation-list li:nth-child(1) {
-    order: 3; }
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3; }
   .navigation-list li:nth-child(4) {
-    order: 4; }
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4; }
   /* Home section */
   .home .skyline {
     width: 900%; }
@@ -419,7 +507,8 @@ footer ul li a {
     padding: 0px;
     margin: 0px; }
   .thumbnail-list li {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     cursor: pointer;
     position: relative;
     border: 1px dotted black;
@@ -431,13 +520,15 @@ footer ul li a {
     background-color: #793236; }
   .back-side .front-side {
     position: absolute;
-    backface-visibility: hidden; }
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden; }
   .back-side {
     text-align: center;
     text-transform: uppercase;
     font-size: 0.80em; }
   .back-side {
-    transform: rotateY(180); }
+    -webkit-transform: rotateY(180);
+            transform: rotateY(180); }
   .thumbnail-image {
     width: 200px; }
   .thumbnail-item {
@@ -473,23 +564,46 @@ footer ul li a {
     font-size: 1em;
     margin-top: 50px; }
   .cv-download {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-content: center; }
+    -ms-flex-line-pack: center;
+        align-content: center; }
   .cv-download a {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-decoration: none;
     padding: 5px 0;
-    align-content: flex-end; }
+    -ms-flex-line-pack: end;
+        align-content: flex-end; }
   .a-left {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
     margin-right: 15px; }
   .a-right {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     margin-left: 15px; }
   .cv-download a span {
     font-size: 0.8em;
@@ -512,10 +626,12 @@ footer ul li a {
     width: 100%; }
   #name {
     margin: 7px 0;
-    box-sizing: border-box; }
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
   #email {
     margin: 7px 0;
-    box-sizing: border-box; }
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
   textarea {
     margin: 7px 0; }
   input[type=submit] {
@@ -627,8 +743,6 @@ html.lb-disable-scrolling {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   -webkit-transition: opacity 0.6s;
-  -moz-transition: opacity 0.6s;
-  -o-transition: opacity 0.6s;
   transition: opacity 0.6s; }
 
 .lb-nav a.lb-prev:hover {
@@ -643,8 +757,6 @@ html.lb-disable-scrolling {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   -webkit-transition: opacity 0.6s;
-  -moz-transition: opacity 0.6s;
-  -o-transition: opacity 0.6s;
   transition: opacity 0.6s; }
 
 .lb-nav a.lb-next:hover {
@@ -700,8 +812,6 @@ html.lb-disable-scrolling {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
   opacity: 0.7;
   -webkit-transition: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  -o-transition: opacity 0.2s;
   transition: opacity 0.2s; }
 
 .lb-data .lb-close:hover {
