--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -17,19 +17,26 @@
         font-style: normal;
 }
 
-html, body {
-    margin: 0;
-    padding: 0;
+:root {
+    --scarlet: #793236;
 }
 
-head {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+html {
+box-sizing: border-box;
+font-family: Montserrat, Verdana, Tahoma, Sans-Serif;
+font-weight: normal;
+color: black;
+text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
+}
+
+*,
+*:before,
+*:after {
+box-sizing: inherit;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    font-family: Montserrat, sans-serif;
+margin: 0;
 }
 
 .main-header {
@@ -84,6 +91,8 @@ nav ul li a:visited {
 main {
     padding: 0px;
     text-align: center;
+    display: grid;
+    grid-template-columns: 2fr 80fr 2fr;
 }
 
 .section-titles {
@@ -151,24 +160,24 @@ main {
     width: 1200px;
     text-align: center;
     margin: 0 auto;
-    box-sizing: border-box;
+    
 }
 
 .thumbnail-list {
     list-style: none;
     padding: 0px;
     margin: 0px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px;
 }
 
 .thumbnail-list li {
-    box-sizing: border-box;
     cursor: pointer;
     position: relative;
     border: 1px dotted black;
     border-radius: 20px;
-    margin: 10px;
-    width: calc((1200px - 150px)/4);
-    height: calc((1200px - 150px)/4);
+    padding: 20px;
 }
 
 .thumbnail-item:hover {
@@ -195,7 +204,7 @@ main {
 }
 
 .thumbnail-image {
-    width: 200px;
+    width: 100%;
 }
 
 .thumbnail-item {
