--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -37,32 +37,36 @@ box-sizing: inherit;
 
 body {
 margin: 0;
+
 }
 
-.main-header {
-    overflow: hidden;
+/* Navigation bar */
+
+.navigation-bar {
     position: fixed;
     width: 100%;
-    background-color: white;
-    opacity: 0.95;
+    background-color: rgba(255, 255, 255, 0.925);
     z-index: 1;
-    margin: 0 auto 10px auto;
 }
 
 .logo {
     width: 150px;
+    display: block;
+    margin: 30px auto 20px auto;
 }
 
-.navigation-bar {
-    text-align: center;
-    display: table;
-    margin: 25px auto 0px auto;
+.circle-nav {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: #793236 4px solid;
+    margin: 10px auto;
+    background-color: transparent;
 }
 
 .navigation-list {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     list-style-type: none;
-    margin-bottom: 8px;
+    text-align: center;
 }
 
 .navigation-list li {
@@ -70,29 +74,26 @@ margin: 0;
 }
 
 nav ul li a {
-    font-size: 1em;
+    font-size: 1.1em;
     text-decoration: none;
     color: black;
-    padding: 0 15px;
+    padding: 0;
+    margin: 0 12px;
 }
 
 nav ul li a:hover {
-    color: #793236;
-    font-size: 1.1em;
-    text-decoration: underline overline black;
+    text-shadow: none;
+    border-bottom: 2px solid var(--scarlet);
 }
 
 nav ul li a:visited {
-    color: #793236;
-    font-size: 1.2em;
     font-weight: bold;
 }
 
 main {
-    padding: 0px;
     text-align: center;
     display: grid;
-    grid-template-columns: 2fr 80fr 2fr;
+    grid-template-columns: 15fr 80fr 15fr;
 }
 
 .section-titles {
@@ -105,6 +106,7 @@ main {
     position: relative;
     overflow: hidden;
     box-sizing: border-box;
+    grid-column: 1 /-1;
 }
 
 .home .skyline {
@@ -157,10 +159,8 @@ main {
 /* Arch portfolio section */
 
 .arch {
-    width: 1200px;
     text-align: center;
-    margin: 0 auto;
-    
+    grid-column: 2 / -2;
 }
 
 .thumbnail-list {
@@ -217,17 +217,15 @@ main {
 /* Websites section */
 
 .websites {
-    width: 1200px;
-    margin: 0 auto;
-    text-align: center;
-    box-sizing: border-box;
+    grid-column: 2 / -2;
 }
 
 .websites-list {
     list-style-type: none;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    padding: 0%;
 }
 
 .websites-item {
@@ -235,10 +233,6 @@ main {
     position: relative;
     display: inline-block;
     border: 1px dotted black;
-    margin: 10px;
-    padding: 10px;
-    width: 350px;
-    height: 250px;
     overflow: hidden;
     border-radius: 20px;
     box-sizing: border-box;
@@ -257,9 +251,7 @@ main {
 /* About section */
 
 .about {
-    width: 1200px;
-    margin: 0 auto;
-    box-sizing: border-box;
+    grid-column: 2 / -2;
 }
 
 .about-content {
@@ -333,10 +325,9 @@ main {
 /* Contact section */
 
 .contact {
-    width: 1200px;
-    margin: 0 auto;
     text-align: center;
     box-sizing: border-box;
+    grid-column: 2 / -2;
 }
 
 form {
