--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* Import font icons */
 @font-face {
   font-family: "brands";
   src: url("../fonts/fa-brands-400.eot");
@@ -12,84 +11,107 @@
   font-weight: normal;
   font-style: normal; }
 
-html, body {
-  margin: 0;
-  padding: 0; }
+:root {
+  --scarlet: #793236; }
 
-head {
-  font-family: Verdana, Geneva, Tahoma, sans-serif; }
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: Montserrat, Verdana, Tahoma, Sans-Serif;
+  font-weight: normal;
+  color: black;
+  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07); }
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit; }
 
 body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  font-family: Montserrat, sans-serif; }
+  margin: 0; }
 
 .main-header {
-  overflow: hidden;
+  display: grid;
   position: fixed;
-  width: 100%;
-  background-color: white;
-  opacity: 0.95;
-  z-index: 1;
-  margin: 0 auto 10px auto; }
-
-.logo {
-  width: 150px; }
+  background-color: rgba(255, 255, 255, 0.925);
+  z-index: 1; }
 
 .navigation-bar {
-  text-align: center;
-  display: table;
-  margin: 25px auto 0px auto; }
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: 1fr auto 1fr;
+  grid-row: 2 /span 1; }
+
+.navigation-bar a {
+  grid-column: 2 / span 1; }
+
+.logo {
+  width: 150px;
+  display: block;
+  margin: 30px auto 20px auto; }
+
+.circle-nav {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: var(--scarlet) 5px solid;
+  margin: 10px auto;
+  background-color: transparent;
+  grid-column: 2 / span 1; }
 
 .navigation-list {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  list-style-type: none;
-  margin-bottom: 8px; }
+  grid-row: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
-.navigation-list li {
-  display: inline; }
+.navigation-list-left {
+  grid-column: 1 / span 1;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
 
-nav ul li a {
-  font-size: 1em;
-  text-decoration: none;
-  color: black;
+.navigation-list-right {
+  grid-column: 3 / span 1; }
+
+.navigation-list-left div, .navigation-list-right div {
   padding: 0 15px; }
 
-nav ul li a:hover {
-  color: #793236;
+.navigation-bar div * {
   font-size: 1.1em;
-  -webkit-text-decoration: underline overline black;
-          text-decoration: underline overline black; }
+  text-decoration: none;
+  color: black;
+  padding: 0;
+  margin: 0 12px; }
 
-nav ul li a:visited {
-  color: #793236;
-  font-size: 1.2em;
+.navigation-bar div *:hover {
+  text-shadow: none;
+  border-bottom: 2px solid var(--scarlet); }
+
+.navigation-bar div *:visited {
   font-weight: bold; }
 
 main {
-  padding: 0px;
-  text-align: center; }
+  text-align: center;
+  display: grid;
+  grid-template-columns: 15fr 80fr 15fr; }
 
 .section-titles {
   padding: 150px 0 10px 0; }
 
-/* Home section */
 .home {
   height: 100%;
   position: relative;
   overflow: hidden;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+          box-sizing: border-box;
+  grid-column: 1 /-1; }
 
 .home .skyline {
   width: 300%; }
 
-/* Skyline animation */
 #Buildings.buildings {
   -webkit-transform: translateX(-3000px);
           transform: translateX(-3000px);
@@ -138,32 +160,25 @@ main {
   -webkit-transition: 40s;
   transition: 40s; }
 
-/* Arch portfolio section */
 .arch {
-  width: 1200px;
   text-align: center;
-  margin: 0 auto;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  grid-column: 2 / -2; }
 
 .thumbnail-list {
   list-style: none;
   padding: 0px;
-  margin: 0px; }
+  margin: 0px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 30px; }
 
 .thumbnail-list li {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   cursor: pointer;
   position: relative;
   border: 1px dotted black;
   border-radius: 20px;
-  margin: 10px;
-  width: calc((1200px - 150px)/4);
-  height: calc((1200px - 150px)/4); }
-
-.thumbnail-item:hover {
-  background-color: #793236; }
+  padding: 20px; }
 
 .thumbnail-list li:focus {
   background-color: aqua; }
@@ -178,46 +193,61 @@ main {
   text-transform: uppercase;
   font-size: 0.80em; }
 
-.back-side {
-  -webkit-transform: rotateY(180);
-          transform: rotateY(180); }
-
 .thumbnail-image {
-  width: 200px; }
+  width: 100%; }
 
 .thumbnail-item {
   display: inline-block;
-  border: 1px solid white;
+  border: 1px solid #fff;
   border: 1px solid rgba(255, 255, 255, 0.8); }
 
-/* Websites section */
+.arch-overlay {
+  background: #860d0da6;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  position: relative;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%); }
+
+.arch-overlay button {
+  background: none;
+  border: 2px solid white;
+  color: white;
+  text-transform: uppercase;
+  background: rgba(0, 0, 0, 0.116);
+  padding: 5px; }
+
+.thumbnail-item:hover .arch-overlay {
+  -webkit-transform: translateY(0);
+          transform: translateY(0); }
+
 .websites {
-  width: 1200px;
-  margin: 0 auto;
-  text-align: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  grid-column: 2 / -2; }
 
 .websites-list {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  padding: 0; }
 
 .websites-item {
   cursor: pointer;
   position: relative;
   display: inline-block;
   border: 1px dotted black;
-  margin: 10px;
-  padding: 10px;
-  width: 350px;
-  height: 250px;
   overflow: hidden;
   border-radius: 20px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+          box-sizing: border-box;
+  padding: 10px; }
 
 .websites-list li a {
   text-decoration: none;
@@ -227,18 +257,14 @@ main {
 .websites-list li a img {
   width: 100%; }
 
-/* About section */
 .about {
-  width: 1200px;
-  margin: 0 auto;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  grid-column: 2 / -2; }
 
 .about-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #793236;
+  background-color: var(--scarlet);
   border-radius: 20px;
   padding: 20px;
   padding-top: 100px;
@@ -316,13 +342,11 @@ main {
 .cv-logo {
   width: 30%; }
 
-/* Contact section */
 .contact {
-  width: 1200px;
-  margin: 0 auto;
   text-align: center;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+          box-sizing: border-box;
+  grid-column: 2 / -2; }
 
 form {
   display: -webkit-box;
@@ -359,7 +383,7 @@ input[type=text] {
   margin-left: 10px; }
 
 input[type=text]:focus {
-  border: 2px solid #793236;
+  border: 2px solidvar(--scarlet);
   -webkit-box-shadow: none;
           box-shadow: none;
   outline: 0; }
@@ -374,24 +398,23 @@ textarea {
   border-radius: 20px; }
 
 textarea:focus {
-  border: 2px solid #793236;
+  border: 2px solidvar(--scarlet);
   outline: 0; }
 
 input[type=submit] {
   padding: 10px;
   margin: 15px 0;
-  border: 2px solid #793236;
+  border: 2px solidvar(--scarlet);
   background: none;
   font-weight: bold;
   font-size: 1em;
   border-radius: 20px; }
 
 input[type=submit]:hover {
-  background-color: #793236;
+  background-color: var(--scarlet);
   color: white;
   cursor: pointer; }
 
-/* Footer section */
 footer {
   width: 100%;
   font-family: brands, sans-serif;
@@ -438,29 +461,20 @@ footer ul li a {
   font-size: 1.4em; }
 
 .w-logo {
-  color: #793236; }
+  color: var(--scarlet); }
 
 .typewrite {
   font-weight: bold;
-  color: #793236; }
+  color: var(--scarlet); }
 
-/*
-*
-* Media queries
-*
-*
-*/
-/* Media query max 426px width */
 @media screen and (max-width: 721px) {
-  /* Main header */
   .main-header {
     background-color: rgba(255, 255, 255, 0.63); }
-  /* Nav bar */
   .circle-nav {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    border: #793236 4px solid;
+    border: var(--scarlet) 4px solid;
     margin: 10px auto;
     background-color: transparent; }
   .navigation-list {
@@ -474,7 +488,7 @@ footer ul li a {
         -ms-flex-direction: column;
             flex-direction: column;
     margin-top: 30px;
-    background-color: white;
+    background-color: #fff;
     padding: 20px;
     border-radius: 20px;
     border: #793236 1px dotted; }
@@ -496,10 +510,8 @@ footer ul li a {
     -webkit-box-ordinal-group: 5;
         -ms-flex-order: 4;
             order: 4; }
-  /* Home section */
   .home .skyline {
     width: 900%; }
-  /* Architecture section */
   .arch {
     width: 100%; }
   .thumbnail-list {
@@ -533,9 +545,8 @@ footer ul li a {
     width: 200px; }
   .thumbnail-item {
     display: inline-block;
-    border: 1px solid white;
+    border: 1px solid #fff;
     border: 1px solid rgba(255, 255, 255, 0.8); }
-  /* websites section */
   .websites {
     width: 100%; }
   .websites-item {
@@ -544,7 +555,6 @@ footer ul li a {
     width: 90%; }
   .websites-list li + li {
     margin-top: 20px; }
-  /* About section */
   .about {
     width: 100%;
     margin: 0 auto;
@@ -615,7 +625,6 @@ footer ul li a {
     text-decoration: underline; }
   .cv-logo {
     width: 30%; }
-  /* Contact */
   .contact {
     width: 100%;
     padding: 10px; }
@@ -636,18 +645,10 @@ footer ul li a {
     margin: 7px 0; }
   input[type=submit] {
     background-color: #793236;
-    color: white; }
-  /* footer */ }
+    color: white; } }
 
-/*
-*
-* Lightbox styles
-*
-*
-*/
 html.lb-disable-scrolling {
   overflow: hidden;
-  /* Position fixed required for iOS. Just putting overflow: hidden; on the body is not enough. */
   position: fixed;
   height: 100vh;
   width: 100vw; }
@@ -677,7 +678,6 @@ html.lb-disable-scrolling {
   max-width: inherit;
   max-height: none;
   border-radius: 3px;
-  /* Image border */
   border: 4px solid white; }
 
 .lightbox a img {
@@ -690,8 +690,6 @@ html.lb-disable-scrolling {
   height: 250px;
   margin: 0 auto;
   border-radius: 4px;
-  /* Background color behind image.
-       This is visible during transitions. */
   background-color: white; }
 
 .lb-outerContainer:after {
