Update arch section

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -26,7 +26,6 @@ box-sizing: border-box;
 font-family: Montserrat, Verdana, Tahoma, Sans-Serif;
 font-weight: normal;
 color: black;
-text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
 }
 
 *,
@@ -95,13 +94,9 @@ margin: 0;
     grid-column: 3 / span 1;
 }
 
-.navigation-list-left div,
-.navigation-list-right div {
-    padding: 0 15px;
-}
-
 .navigation-bar div * {
     font-size: 1.1em;
+    font-weight: bold;
     text-decoration: none;
     color: black;
     padding: 0;
@@ -110,12 +105,14 @@ margin: 0;
 
 .navigation-bar div *:hover {
     text-shadow: none;
-    border-bottom: 2px solid var(--scarlet);
+    border-bottom: 3px solid var(--scarlet);
 }
 
 .navigation-bar div *:visited {
     font-weight: bold;
 }
+
+/* Main grid for rest of sections */
 
 main {
     text-align: center;
@@ -124,7 +121,8 @@ main {
 }
 
 .section-titles {
-    padding: 150px 0 10px 0;
+    text-align: center;
+    padding: 170px 0 10px 0;
 }
 
 /* Home section */
@@ -186,7 +184,6 @@ main {
 /* Arch portfolio section */
 
 .arch {
-    text-align: center;
     grid-column: 2 / -2;
 }
 
@@ -195,17 +192,17 @@ main {
     padding: 0px;
     margin: 0px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(4, minmax(200px, 1fr));
+    grid-template-rows: repeat(3, minmax(200px, 1fr));
     grid-gap: 30px;
 }   
 
 .thumbnail-list li {
     cursor: pointer;
-    position: relative;
     border: 1px dotted black;
     border-radius: 20px;
     padding: 20px;
+    position: relative;
 }
 
 .thumbnail-list li:focus {
@@ -218,13 +215,16 @@ main {
 }
 
 .back-side {
+    display: inline-block;
     text-align: center;
     text-transform: uppercase;
     font-size: 0.80em;
+    transition: 0.3s ease;
 }
 
 .thumbnail-image {
     width: 100%;
+    transition: 1s ease;
 }
 
 .thumbnail-item {
@@ -234,30 +234,48 @@ main {
     border: 1px solid rgba(100%, 100%, 100%, 0.8);
 }
 
-.arch-overlay{
-    background: #860d0da6;
-    grid-column: 1 / -1;
-    grid-row: 1 / -1;
-    position: relative;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    transition: 0.3s;
-    transform: translateY(100%);
-  }
+.arch-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    border-radius: 20px;
+    transition: 1s ease;
+}
 
-  .arch-overlay button {
-    background: none;
+.thumbnail-list li:hover {
+    border: 2px solid black;
+}
+
+.thumbnail-list li:hover .arch-overlay {
+    opacity: 1;
+}
+
+.thumbnail-list li:hover .thumbnail-image {
+    transform: scale(1.4);
+}
+
+.thumbnail-list li:hover .back-side {
+    border-bottom: 1.5px solid var(--scarlet);
+}
+
+.arch-overlay button {
+    position: absolute;
+    left: 50%;
+    top: 50%;
     border: 2px solid white;
     color: white;
     text-transform: uppercase;
-    background: rgba(0, 0, 0, 0.116);
-    padding: 5px;
-  }
-
-  .thumbnail-item:hover .arch-overlay {
-    transform: translateY(0);
-  }
+    background: var(--scarlet);
+    font-size: 1em;
+    padding: 10px;
+    text-align: center;
+    transform: translate(-50%, -50%);
+}
 
 /* Websites section */
 
@@ -268,14 +286,13 @@ main {
 .websites-list {
     list-style-type: none;
     display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 30px;
+    grid-template-columns: repeat(3, minmax(300px, 1fr));
     padding: 0;
 }
 
 .websites-item {
     cursor: pointer;
-    position: relative;
     display: inline-block;
     border: 1px dotted black;
     overflow: hidden;
@@ -741,7 +758,7 @@ footer ul li a {
     }
     
     input[type=submit] {
-        background-color: #793236;
+        background-color: var(--scarlet);
         color: white;
     }
 
